Align text to the left

--- a/src/main.css
+++ b/src/main.css
@@ -99,6 +99,10 @@ form {
   font-weight: bold;
 }
 
+.obj, .result {
+  text-align: left;
+}
+
 /* Team name and date */
 .team-name,
 .manager-name
